# scratching-post

amaranth-axi-soc/: .gitignore  pyproject.toml
amaranth-axi-soc/axilite/: bus.py  sram.py  test_decoder.py  test_sram.py
bitcell/: .gitignore  make_sky130.tcl  make_spice.tcl
bitcell/bitcell_gen/: generator.py  generator_sky130.py  patch_lef.py  patch_lef_sky130.py
bitcell/odbpy/: optimise_onehot.py
bitcell/spice_tb/: testbench.spice
bitcell/template_sky/: .gitignore  optimise_onehot.py
cgra/: .gitignore
cgra/testbench/: assemble.py  cgra_tile_tb.v  mul_and_route.cfg  run.sh
clb-gen/: .gitignore  clb_gen.py  complex_ff.py  logiccell_gen.py  lut_muxtree.py  module_config.py  module_gen.py  module_utils.py
clb-gen/latchram/: ram.v  ram_dff.v  ram_latch.v  ram_latch_ts.v
clb-gen/prototype/: bitstream.txt  fpga_cells.v  fpga_sim.sh  fpga_tb.v  fpga_top.v  logic_cell.v  lutnoram_sky130.v  lutram_sim.sh  lutram_sky130.v  lutram_tb.v  pe.v
clb-gen/tech/: generic.v
cxxrtl-tap/: .gitignore  Makefile  depacketiser.py  main.cc  pyproject.toml
cxxrtl-tap/tap_demo/: .gitignore  depacketiser.py  tap_demo.py  test_depacketiser.py
dp/dp_aux_sink/: dp_aux_phy.py  dp_aux_upacket.py
dpram/: clock_doubler.v  dual_port_ram.v  run.sh  tech.v
eplc/: .gitignore  fft_test.py  fft_test_plot.py
example-soc-postsyn/: .gitignore  build_verilator.sh  hello.v  main.cc  postpnr.sh  postsyn.sh  sim_unwrapper.v  spiflash.v  testbench.v  verilator_wrapper.v
example-soc-postsyn/models/: models.cc  (+1 more)
fab-mapping-tests/: prims.v
fab-soc/: .gitignore
mac-map/: bigmuls.v  mul_map.v
next186-icebreaker/: .gitignore
pic10/: pic10.v
qspi-soc-pmod/: .gitignore
sky130-synth/: mem_macros.txt  mem_map.v  synth_noram.tcl  synth_test.tcl
soc-ulx3s/: sim_soc.py  soc.py  wrapper.py
sram-gf180/: .gitignore  run_pnr.py  run_pnr_config.py  synth.ys  test.v
sta/: .gitignore  openrcx.tcl  pnr.py  synth.ys
stm32-rust-testing/: Cargo.toml
tt02-bringup/: program_fpga.py  tiny_blink.asm
ttfpga-toolchain/: .gitignore  do_miter.ys  miter.sv
vex/: .gitignore  Makefile  pnr.py  synth.ys  wrapper.v
vex-soc/: .gitignore  Makefile
(+142 files in other folders)
