# Project metadata

[project]
name = "amaranth-axi-soc"
dynamic = ["version"]
description = ""
authors = [
    {name = "Myrtle Shah", email = "gatecat@ds0.me" },
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.txt"}

requires-python = ">=3.10"
dependencies = [
    "amaranth>=0.5,<0.6",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc",

    "pytest"
]

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.scripts]
test.cmd = "pytest"

