[package]
edition = "2024"
name = "stm32-rust-testing"
version = "0.1.0"

[dependencies]
# Change stm32f777zi to your chip name, if necessary.
embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32f746zg", "memory-x", "unstable-pac", "time-driver-any", "exti"]  }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embedded-io-async = { version = "0.6.1" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
critical-section = "1.1"
embedded-storage = "0.3.1"
static_cell = "2"

[profile.release]
debug = 2